# Solardash

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: alerts.rs  api.rs  colors.rs  data.rs  lib.rs  main.rs  map.rs  world_data.rs
tests/: integration_test.rs
